.provarCaches/00D5f000005vwGkEAI/objects/rstk__syauth__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syauth</customHelpPage>
    <description>syauth__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syauth_div__r.rstk__sydiv_div__c + &apos;_&apos; + rstk__syauth_authid__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syauth_authid__c</fullName>
        <inlineHelpText>This is the Authorization ID  of the user that  authorizes that the indirect material has been received or the service has been performed.</inlineHelpText>
        <label>Authorization ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syauth_descr__c</fullName>
        <inlineHelpText>This is a user defined descriptive name of the Authorizer.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syauth_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with the Authorizer</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Authorizers</relationshipLabel>
        <relationshipName>divsyauths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syauth_password__c</fullName>
        <inlineHelpText>The Password set here will be used to authenticate the Authorizer during the Authorization Process.</inlineHelpText>
        <label>Authorization Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syauth_pwdentry__c</fullName>
        <inlineHelpText>This is the Password associated with this Authorization ID.</inlineHelpText>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Authorizer</label>
    <listViews>
        <fullName>PK_All</fullName>
        <columns>NAME</columns>
        <columns>rstk__syauth_authid__c</columns>
        <columns>rstk__syauth_password__c</columns>
        <columns>rstk__syauth_descr__c</columns>
        <columns>rstk__syauth_div__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PK_All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Authorizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorizers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>